--- a/courses/ROS/ROS2CoreConcepts.html
+++ b/courses/ROS/ROS2CoreConcepts.html
@@ -1062,7 +1062,7 @@
                   Previous</a
                 >
                 <a
-                  href="#"
+                  href="ROS2CoreConcepts2.html"
                   class="btn btn-neutral float-right"
                   title="Beginner: CLI tools"
                   accesskey="n"
