--- a/courses/ROS/ROS2CoreConcepts2.html
+++ b/courses/ROS/ROS2CoreConcepts2.html
@@ -857,7 +857,7 @@ from std_msgs.msg import String</code></pre>
                 aria-label="Footer"
               >
                 <a
-                  href="linux.html"
+                  href="ROS2CoreConcepts.html"
                   class="btn btn-neutral float-left"
                   title="Introduction of ROS"
                   accesskey="p"
